# langchain2neo4j

./: .env.example  .gitignore  README.md  docker-compose.yml  seed_db.sh
backend/: Dockerfile  pyproject.toml
backend/src/: agent.py  cosine_neo4j_tool.py  cypher_database_tool.py  database.py  endpoints.py  fulltext_neo4j_tool.py  keyword_neo4j_tool.py  logger.py  main.py  movie_database_tool.py  run.py  vector_neo4j_tool.py
data/: database_seed.ipynb  import.py
frontend/: Dockerfile
