[tool.poetry]
name = "langchain2neo4j"
version = "0.1.0"
description = "Integrating Neo4j database into langchain ecosystem"
authors = ["Ibis Prevedello <ibiscp@gmail.com>", "Tomaz Bratanic <bratanic.tomaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
langchain = "^0.0.136"
neo4j = "^5.7.0"
fastapi = "^0.95.0"
rich = "^13.3.3"
openai = "^0.27.4"
google-search-results = "^2.4.2"
uvicorn = "^0.21.1"
setuptools = "^67.6.1"
tiktoken = "^0.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"
mypy = "^1.1.1"
ruff = "^0.0.254"
httpx = "^0.23.3"
pytest = "^7.2.2"
types-requests = "^2.28.11"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
